# g10

./: .gitignore  .gitmodules  APS_3rdPersonCtrl.c  APS_3rdPersonCtrl.h  CMakeLists.txt  Dockerfile  G10 Vulkan.sln  G10 Vulkan.vcxproj  G10 Vulkan.vcxproj.filters  G10.c  G10_tester.c  GEMINI.md  GXAI.c  GXAudio.c  GXBV.c  GXCamera.c  GXCameraController.c  GXCollider.c  GXCollision.c  GXDiscordIntegration.c  GXEntity.c  GXGJKA.asm  GXInput.c  GXLinear.c  GXLinearA.asm  GXMaterial.c  GXPLY.c  GXPart.c  GXPhysics.c  GXQuaternion.c  GXRenderer.c  GXRigidbody.c  GXScene.c  GXScheduler.c  GXServer.c  GXShader.c  GXTexture.c  GXTransform.c  GXUserCode.c  LICENSE  (+37 more)
.github/: FUNDING.yml
.github/workflows/: cmake.yml
assets/: instance copy.json  instance.json  lightspeed.json
assets/blender/: g10_base_geometry.blend  g10_base_geometry.blend1  g10_multimat.blend  g10_multimat.blend1  g10_test_room.blend  g10_test_room.blend1  lightspeed.blend  lightspeed.blend1
assets/entity/: +x wall.json  +y wall.json  -x wall.json  Camera.json  back x wall.json  back y wall.001.json  back y wall.json  blue.json  capsule.json  ceiling.json  circle.json  cone.json  cube.json  cylinder.json  floor.json  front x wall.json  front y wall.json  green.json  grid.json  icosphere.json  light.json  normal base.json  normal lighting sign.json  normal lighting.json  normal object.json  normal2 base.json  normal2 lighting sign.json  normal2 lighting.json  normal2 object.json  octahedron.json  pitch white base.json  pitch white lighing.json  pitch white object.001.json  pitch white object.002.json  pitch white object.003.json  pitch white object.json  plane.json  quadsphere.json  ramp 45.json  ramp shallow.json  (+9 more)
assets/geometry/: +x wall.json  +y wall.json  -x wall.json  -y wall.json  Elbow Joint.001.json  Elbow Joint.002.json  Elbow Joint.003.json  Elbow Joint.004.json  Plane.001.json  Plane.002.json  Plane.003.json  Plane.004.json  Plane.005.json  Plane.006.json  Plane.007.json  Plane.008.json  Plane.009.json  Plane.010.json  Plane.011.json  Plane.012.json  Plane.013.json  Plane.014.json  Plane.015.json  Plane.016.json  Plane.017.json  Plane.018.json  Plane.019.json  Plane.020.json  Plane.021.json  Plane.022.json  Plane.023.json  Plane.024.json  Plane.025.json  Plane.026.json  Plane.027.json  Plane.028.json  Plane.029.json  Plane.json  back x wall.json  back y wall.001.json  (+58 more)
assets/material/: Dots Stroke.json  calibration.json  display.json  floor.json  floor3.json  normal sign.json  pitch white sign.json  r.001.json  r.002.json  r.json  ramp.json  sign 2.json  sign2.json  teapot.json  wall.001.json  wall.json  wall5.json
assets/pipeline/: aabb.json  color.json  default.json  entity.json  floor.json  geom.json  normal.json  quad.json  skybox.json  tbn.json  texture.json  uv.json
assets/renderer/: renderer.json
assets/scene/: level 1.json  scene.json  test room.json
assets/skybox/: skybox.json
assets/transform/: +x wall.json  +y wall.json  -x wall.json  -y wall.json  ceiling.json  floor.json  light.json  octahedron.json  ramp 45.json  ramp shallow.json  ramp sign.json  ramp steep.json  white lighting base.json  white lighting element.json  white lighting noise.json
cmake/: FindSDL2_image.cmake  FindSDL2_net.cmake
gport/: __init__.py  g10_blender.py  gxport.py
include/: aabb.h  attachment.h  bv.h  camera.h  camera_controller.h  entity.h  framebuffer.h  g10.h  geometry.h  gtypedef.h  input.h  light.h  linear.h  material.h  pipeline.h  render_pass.h  renderer.h  sampler.h  scene.h  skybox.h  texture.h  transform.h  uniform.h  user_code.h
include/G10/: APS_3rdPersonCtrl.h  G10.h  GXAI.h  GXAudio.h  GXBV.h  GXCamera.h  GXCameraController.h  GXCollider.h  GXCollision.h  GXDiscordIntegration.h  GXEPA.h  GXEntity.h  GXGJK.h  GXInput.h  GXLight.h  GXLinear.h  GXMaterial.c  GXMaterial.h  GXPart.h  GXPhysics.h  GXQuaternion.h  GXRenderer.h  GXRig.h  GXRigidbody.h  GXScene.h  GXScheduler.h  GXServer.h  GXShader.h  GXTexture.h  GXTransform.h  GXUI.h  GXUserCode.h  GXtypedef.h
include/g10/: ai.h  bv.h  camera.h  camera_controller.h  cull.h  entity.h  g10.h  gtypedef.h  input.h  linear.h  mesh.h  ply.h  quaternion.h  renderer.h  scene.h  server.h  shader.h  shell.h  transform.h  user_code.h
lightspeed/: main.c
manual/: ai.md  faq.md  manual.md  schedule.md  style.md  tutorial.md
notes/: data.txt  graphics-pipeline.txt
prompts/: 30-12-2025-analysis.md
resources/: final_instance.json  instance.json  instance2.json
resources/mesh/: tank.json
resources/shaders/: holdout.json
scripts/: compile-metal-shader.sh  gport-geometry.py  gport-geometry.sh  pack-geometry.sh
scripts/assets/: gport-assets.sh
scripts/entity/: gport-entity.py  gport-entity.sh
scripts/geometry/: gport-geometry.py  gport-geometry.sh  pack-geometry.sh
scripts/material/: gport-material.py  gport-material.sh
scripts/pipeline/: compile-metal-shader.sh
scripts/scene/: gport-scene.py  gport-scene.sh
scripts/texture/: gport-texture.py  gport-texture.sh
scripts/transform/: gport-transform.py  gport-transform.sh
src/: aabb.c  attachment.c  camera.c  camera_controller.c  entity.c  framebuffer.c  g10.c  g10_sdl3.c  geometry.c  input.c  linear.c  material.c  pipeline.c  render_pass.c  renderer.c  sampler.c  scene.c  transform.c  uniform.c
src/core/: g10.c  user_code.c
src/impl/: g10_sdl3.c
src/input/: input.c
src/math/: linear.c
src/renderer/: framebuffer.c  geometry.c  material.c  pipeline.c  render_pass.c  renderer.c  sampler.c  texture.c  uniform.c
src/world/: aabb.c  bv.c  camera.c  camera_controller.c  entity.c  light.c  scene.c  skybox.c  transform.c
test cases/camera/: clip_far_wrong_type.json  clip_invalid_range.json  clip_near_wrong_type.json  clip_wrong_type.json  fov_and_scale.json  fov_too_large.json  fov_too_small.json  fov_wrong_type.json  location_too_long.json  location_too_short.json  location_wrong_type.json  missing_clip.json  missing_clip_far.json  missing_clip_near.json  missing_fov_or_scale.json  missing_location.json  missing_orientation.json  orientation_too_long.json  valid_ortho.json  (+6 more)
(+134 files in other folders)
